fix vertical alignment; bug 494112, p=milos
git-svn-id: http://svn.mozilla.org/addons/trunk@29962 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/site/app/webroot/css/amo2009/main.css
+++ b/site/app/webroot/css/amo2009/main.css
@@ -665,6 +665,10 @@ span.new {
     font-size: 0.611em;
 }
 
+a:link, a:active, a:visited, a:hover, a:focus, h3, .secondary {
+    vertical-align: middle;
+}
+
 /* @end */
 
 /* @group hReviews */
